--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -5,12 +5,25 @@
   <!-- Region -->
   <div class="row mb-3">
     <div class="col">
-      <label class="form-label">Continente</label>
+      <label class="form-label">Continente:</label>
       <select formControlName="region" class="form-control">
         <option value="">-- Seleccione Continente --</option>
         <option *ngFor="let region of regions" [value]="region">
           {{ region }}
         </option>
+      </select>
+    </div>
+  </div>
+
+  <!-- Countires -->
+  <div class="row mb-3">
+    <div class="col">
+      <label class="form-label">Países</label>
+      <select formControlName="region" class="form-control">
+        <option value="">-- Seleccione País --</option>
+        <!-- <option *ngFor="let region of regions" [value]="region">
+          {{ region }}
+        </option> -->
       </select>
     </div>
   </div>
