--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -16,10 +16,10 @@
   </div>
 
   <!-- Countires -->
-  <div class="row mb-3">
+  <div class="row mb-3" *ngIf="countriesByRegion.length > 0">
     <div class="col">
       <label class="form-label">Países</label>
-      <select formControlName="region" class="form-control">
+      <select formControlName="country" class="form-control">
         <option value="">-- Seleccione País --</option>
         <option
           *ngFor="let country of countriesByRegion"
